# MagQual

./: CMakeLists.txt  main.cxx
include/: TFieldHomogeneity.h  TMagQualLogger.h  TUnits.h
src/: CMakeLists.txt  TFieldHomogeneity.cxx  TMagQualLogger.cxx
